Measure and track Merkle tree sizes